test/fail/generated/test_softmax_functional_dim0/test_data_set_0/input_0.pb
JI>	B)2̼|3AAqB%>.mO?L>2.?پQy?Rۇ>O}>v!Ŀ
lb?ld?o?>{Ѽ?FqiW>?9&	iO=SRb߿6OQ?r!?+>u,>?Z
OͿU?t˿su8/>E?fg?E?,]ؿPܾ}<K䓿lA'?͔?4տ_A?ӿ	9<>$'	s?~=֋̊T?Sƿp$>*K<p>4xG>o=?7=?39:?v:?[pֿnׄR7*bSv>@`?U>]t?f۾6!?uO
Y4C?pa˿=zo濘?N#}1?@